Fix: header spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,7 +34,6 @@
     }
 
     .header__container {
-        max-width: 288px;
-        width: 100%;
+        justify-content: space-around;
     }
 }
